Updated some personal info from the workshop template

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://robiandres.netlify.com/"
-title = "johndoe"
+title = "Robi's Blog"
 
 theme = "hugo-coder"
 
@@ -17,11 +17,11 @@ pygmentscodefencesguesssyntax = true
 # disqusShortname = "yourdiscussshortname"
 
 [params]
-    author = "John Doe"
-    description = "John Doe's personal website"
-    keywords = "blog,developer,personal"
-    info = "L33t hacker and coder"
-    avatarurl = "images/avatar.jpg"
+    author = "Robi Andres"
+    description = "Robi Andres' personal website"
+    keywords = "blog,privacy,personal"
+    info = "Currently under construction"
+    avatarurl = "images/Corporate Photo.JPG"
     #gravatar = "john.doe@example.com"
     footercontent = "Enter a text here."
 
@@ -29,7 +29,7 @@ pygmentscodefencesguesssyntax = true
 
     hideCredits = false
     hideCopyright = false
-    since = 2019
+    since = 2020
 
     # Git Commit in Footer, uncomment the line below to enable it.
     commit = "https://github.com/luizdepra/hugo-coder/tree/"
@@ -67,7 +67,7 @@ pygmentscodefencesguesssyntax = true
     name = "Github"
     icon = "fab fa-github"
     weight = 1
-    url = "https://github.com/johndoe/"
+    url = "https://github.com/ranman11/"
 [[params.social]]
     name = "Gitlab"
     icon = "fab fa-gitlab"
